<resources>
    <string name="app_name">FineBody</string>

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="repeatPassword">Repetir Senha</string>
    <string name="enter">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="login">Login</string>
    <string name="TitleAlertEmailOrPasswordInvalid">Ops!</string>
    <string name="MessageAlertEmailOrPasswordInvalid">Email ou senha inválidos</string>
    <string name="TitleAlertLoginFail">Tente novamente</string>
    <string name="MessageAlertLoginFail">Email ou senha errados</string>
    <string name="TitleAlertDifferentPasswords">Tente novamente</string>
    <string name="MessageDifferentPasswords">As senhas não são iguais</string>
    <string name="TitleAlertRegisterFail">Tente novamente</string>
    <string name="MessageAlertRegisterFail">Email já cadastrado</string>
    <string name="TitleAlertAddStudentFail">Erro!</string>
    <string name="MessageAlertAddStudentFail">Tenta novamente!</string>
    <string name="error">Error</string>
    <string name="MessageAlertEditProfileFail">Não foi possível salvar</string>
    <string name="TitleAlertDeleteStudentSuccess">Sucesso!</string>
    <string name="MessageAlertDeleteStudentSuccess">O aluno foi deletado.</string>
    <string name="TitleAlertDeleteStudentFail">Falha!</string>
    <string name="MessageAlertDeleteStudentFail">Não foi possível deletar o aluno.</string>
    <string name="TitleAlertAddMeasureFail">Falha ao adicionar medidas.</string>
    <string name="MessageAlertAddMeasureFail">Tente novamente!</string>
    <string name="TitleAlertEditMeasureFail">Falha ao editar medidas.</string>
    <string name="MessageAlertEditMeasureFail">Tente novamente!</string>
    <string name="ToastDeleteMeasureSuccess">A medida foi deletada.</string>
    <string name="logout">SAIR</string>
    <string name="students">Alunos</string>
    <string name="new_datas">Novos Dados</string>
    <string name="edit_datas">Editar Dados</string>
    <string name="edit">Editar</string>
    <string name="profile">Perfil</string>
    <string name="measures">Medidas</string>
    <string name="graph">Gráficos</string>
    <string name="date">DATA (DD/MM/AAAA)</string>
    <string name="weight">PESO (KG)</string>
    <string name="right_arm">BRAÇO DIREITO (CM)</string>
    <string name="left_arm">BRAÇO ESQUERDO (CM)</string>
    <string name="waist">CINTURA (CM)</string>
    <string name="hip">QUADRIL (CM)</string>
    <string name="right_calf">PANTURRILHA DIREITA (CM)</string>
    <string name="left_calf">PANTURRILHA ESQUERDA (CM)</string>
    <string name="delete">Deletar</string>
    <string name="save">Salvar</string>
    <string name="photos">Fotos</string>
    <string name="name">Nome</string>
    <string name="genre">Gênero</string>
    <string name="age">Idade</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="question_delete">Deletar?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string-array name="genres">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
</resources>
